Fix overflow in overview

--- a/client/src/app/overview/overview.component.scss
+++ b/client/src/app/overview/overview.component.scss
@@ -3,6 +3,7 @@
   height: 100%;
   color: white;
   padding: 0 2vw;
+  overflow: hidden;
 }
 
 .title-wrapper {
